tests/data/partialapp/negative/No warning for right piped2 args.fs
module M

let myFunc a b c = a + b + c

(20, 30) ||> myFunc 10
